Tentatively fixed the vertical scrollbar issue; issue was with the body element being pushed down slightly by a top margin

--- a/styles/homepage-styles.css
+++ b/styles/homepage-styles.css
@@ -6,13 +6,16 @@ html{
 }
 body{
     position:relative;
-    height:100%;
+    margin:0;
+    min-height:100%;
+    /*padding-top: 1px;*/
 }
+
 /*header*/
 #google-header-list {
     list-style-type: none;
-    margin:11px 0 0 0;
-    padding:0; /* default for <ul> is padding-left:40px; margin: 1em 0 1em 0;*/
+    margin:0;
+    padding: 11px 0 0 0; /* default for <ul> is padding-left:40px; margin: 1em 0 1em 0;*/
     font-size: 14px;
     height:auto; /*set a height on the flex container to ensure align-items/align-self works*/
     display:flex;
@@ -22,7 +25,7 @@ body{
 .google-header-list-left {
     display:flex;
     align-items:center; /*Align-items: Set on the flex container; Align-SELF: Set on the flex item*/
-    margin-left:8px;
+    margin-left:16px;
 }
 .google-header-list-right {
     display:flex;
@@ -30,7 +33,7 @@ body{
     font-size: 12px;
 }
 .google-header-list-right li:last-child { /*select the last <li> element in google-header-list-right*/
-    padding-right:0;
+    padding-right:5px;
 }
 .google-header-list-item {
     padding: 0 10px 0 10px;
